--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,5 +1,5 @@
-@import 'core/settings';
-@import 'core/links';
+@import 'core/variables';
+@import 'core/normalize';
 
 body {
 	background: url('../images/logo-adalab-80px.png') center center no-repeat $color-white;
