--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
+    <title>Evaluación final lucia herrador</title>
     <link rel="icon" href="./favicon.png" />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="page">
       <partial src="_header.html" label="Header"></partial>
-      <partial src="_main.html" label="Main"></partial>
-      <partial src="_link.html" aClass="link__adalab" text="Adalab" url="https://adalab.es"></partial>
-      <partial src="_link.html" aClass="link__github" text="GitHub" url="https://github.com"></partial>
+      <main class="page__main">
+        <partial src="_hero.html" label="Hero"></partial>
+        <partial src="_window.html" label="Window"></partial>
+        <partial src="_reasons.html" label="Reasons"></partial>
+      </main>
+      <partial src="_footer.html" label="Footer"></partial>
     </div>
   </body>
 </html>
