add header & hero

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -9,9 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="page">
+    <div class="wrapper">
       <partial src="_header.html" label="Header"></partial>
-      <main class="page__main">
+      <main class="main">
         <partial src="_hero.html" label="Hero"></partial>
         <partial src="_window.html" label="Window"></partial>
         <partial src="_reasons.html" label="Reasons"></partial>
