--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,1 +1,6 @@
-<header class="page__header">@@label</header>
+<header class="header">
+    <button class=burger-button>
+      <img class="burger-icon" src="assets/images/ico-menu.svg" alt="icono de menú">
+    </button>
+  </header>
+  
