--- a/_src/templates/partials/_hero.html
+++ b/_src/templates/partials/_hero.html
@@ -1,1 +1,18 @@
-<main class="page__main">@@label</main>
+<div class="hero">
+    <div class="titles_container">
+      <h1 class="hero__title">
+        anonymous proxy
+      </h1>
+      <h2 class="hero__subtitle">
+        In hac habitasse platea dictumst.
+      </h2>
+    </div>
+    <div class="hero__arrow-containter">
+      <div class="hero__arrow">
+        <a class="hero__arrow-link" href="#first-article">
+          <img class="hero__scrolldown-icon" src="assets/images/ico-scroll-down.svg"
+            alt="icono de acceso a contenido principal">
+        </a>
+      </div>
+    </div>
+  </div>
