--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -6,3 +6,19 @@
 @import 'components/reasons';
 @import 'components/window';
 
+
+  .main{
+    margin:0;
+    padding:0;
+  }
+  .page__wrapper{
+    margin:0 15px;
+    @media all and (min-width:768px) {
+  
+      margin:0 40px;
+    }
+    @media all and (min-width:1200px) {
+      max-width:730px;
+      margin:0 auto;
+    }
+  }
