add reasons and footer structure

--- a/_src/assets/scss/components/_window.scss
+++ b/_src/assets/scss/components/_window.scss
@@ -1,9 +1,6 @@
-/*article window*/
-#first-article{
+/*section window*/
 
-}
-
-.article-window{
+.window{
   background-color:$color-white;
   padding-top:30px;
   padding-bottom:45px;
