--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <div class="wrapper">
+  <body class="wrapper">
       <partial src="_header.html" label="Header"></partial>
       <main class="main">
         <partial src="_hero.html" label="Hero"></partial>
@@ -17,6 +16,5 @@
         <partial src="_reasons.html" label="Reasons"></partial>
       </main>
       <partial src="_footer.html" label="Footer"></partial>
-    </div>
   </body>
 </html>
