--- a/_src/templates/partials/_window.html
+++ b/_src/templates/partials/_window.html
@@ -1,10 +1,10 @@
-<article class="article-window" id="first-article">
-    <div class="page__wrapper">
+<section class="window" id="first-article">
+    <article class="page__wrapper">
       <h3 class="articlew__special-title">insomnia tips</h3>
       <h4 class="articlew__title">looking through a window</h4>
       <p class="articlew__paragraph">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex
         diam nec lectus. Vivamus
         semper sodales rutrum.</p>
       <a class=articlew__go-link href="#go">go</a>
-    </div>
-  </article>
+    </article>
+</section>
