add content & bottons links

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
   </head>
-  <body class="wrapper">
+  <body class="body">
       <partial src="_header.html" label="Header"></partial>
       <main class="main">
         <partial src="_hero.html" label="Hero"></partial>
