--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
-    <a class="footer__scrollup-link" href=#first-article>
-      <img class="footer__scrollup-icon" src="assets/images/ico-arrow.svg" alt="icono para acceder a contenido principal">
+    <a class="footer__scrollup-link" href=#top>
+      <img class="footer__scrollup-icon" src="assets/images/ico-arrow.svg" alt="icono para acceder al inicio de la página">
     </a>
     <div class="page__wrapper">
       <div class="footer__flex-container">
