--- a/_src/templates/partials/_hero.html
+++ b/_src/templates/partials/_hero.html
@@ -1,4 +1,4 @@
-<div class="hero">
+<div class="hero" id="top">
     <div class="titles_container">
       <h1 class="hero__title">
         anonymous proxy
@@ -9,7 +9,7 @@
     </div>
     <div class="hero__arrow-containter">
       <div class="hero__arrow">
-        <a class="hero__arrow-link" href="#first-article">
+        <a class="hero__arrow-link" href="#3reasons">
           <img class="hero__scrolldown-icon" src="assets/images/ico-scroll-down.svg"
             alt="icono de acceso a contenido principal">
         </a>
