--- a/_src/templates/partials/_reasons.html
+++ b/_src/templates/partials/_reasons.html
@@ -1,4 +1,4 @@
-<section class="reasons">
+<section class="reasons" id="3reasons">
     <article class="page__wrapper">
       <h4 class="articler__title">3 reasons to purchase</h4>
       <ul class="article__reasons-container">
