--- a/_src/templates/partials/_window.html
+++ b/_src/templates/partials/_window.html
@@ -1,4 +1,4 @@
-<section class="window" id="first-article">
+<section class="window">
     <article class="page__wrapper">
       <h3 class="articlew__special-title">insomnia tips</h3>
       <h4 class="articlew__title">looking through a window</h4>
