add folder and changes

--- a/_src/templates/partials/_window.html
+++ b/_src/templates/partials/_window.html
@@ -5,6 +5,6 @@
       <p class="articlew__paragraph">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex
         diam nec lectus. Vivamus
         semper sodales rutrum.</p>
-      <a class=articlew__go-link href="#go">go</a>
+      <button class=articlew__go-link href="#go">go</button>
     </article>
 </section>
