--- a/_src/assets/scss/components/_footer.scss
+++ b/_src/assets/scss/components/_footer.scss
@@ -34,6 +34,7 @@
     border-radius:50%;
     width:45px;
     height:45px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     transform:translate(-50%,-50%);
     position:absolute;
     top:0;
